@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.52 2004/05/20 21:16:56 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.53 2004/05/22 00:42:59 zhen Exp $
+
+  21 May 2004; John Davis <zhen@gentoo.org> arch/sparc.py, arch/sparc64.py,
+  livecd/runscript/sparc-archscript.sh,
+  livecd/runscript/sparc64-archscript.sh:
+  sparc fixup patches from gustavoz at g.org
 
   20 May 2004; John Davis <zhen@gentoo.org> modules/livecd_stage2_target.py:
   added support for blacklisting modules via hotplug in livecd-stage2. spec key
